--- a/package.json
+++ b/package.json
@@ -1,31 +1,29 @@
 {
-    "name": "IRWatcher",
-    "version": "0.0.0",
-    "private": true,
-    "scripts": {
-        "start": "node ./bin/www"
-    },
-    "dependencies": {
-        "body-parser": "~1.13.2",
-        "cookie-parser": "~1.3.5",
-        "debug": "~2.2.0",
-        "express": "~4.13.1",
-        "jade": "~1.11.0",
-        "morgan": "~1.6.1",
-        "serve-favicon": "~2.3.0",
-        "yargs": "~3.32.0",
-        "bootstrap": "~3.3.6",
-        "config": "~1.19.0",
-        "emailjs": "~1.0.2",
-        "jquery": "~2.2.0",
-        "jsonpath-plus": "~0.14.0",
-        "log4js": "~0.6.31",
-        "moment": "~2.11.1",
-        "nedb": "~1.7.4",
-        "request": "~2.69.0"
-    },
-    "scripts": {
-        "start": "node app.js"
-    },
-    "main": "app.js"
+  "name": "IRWatcher",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "bootstrap": "~3.3.6",
+    "config": "~1.19.0",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "emailjs": "~1.0.2",
+    "express": "~4.13.1",
+    "jade": "~1.11.0",
+    "jquery": "~2.2.0",
+    "jsonpath-plus": "~0.14.0",
+    "log4js": "~0.6.31",
+    "moment": "~2.11.1",
+    "mongodb": "^2.1.7",
+    "monk": "^1.0.1",
+    "morgan": "~1.6.1",
+    "request": "~2.69.0",
+    "serve-favicon": "~2.3.0",
+    "yargs": "~3.32.0"
+  },
+  "main": "app.js"
 }
