--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "app-module-path": "^1.0.5",
     "body-parser": "~1.13.2",
     "bootstrap": "~3.3.6",
     "config": "~1.19.0",
@@ -22,7 +21,7 @@
     "moment": "~2.11.1",
     "mongodb": "^2.1.7",
     "monk": "^1.0.1",
-    "morgan": "~1.6.1",
+    "morgan": "^1.7.0",
     "request": "~2.69.0",
     "serve-favicon": "~2.3.0",
     "string": "^3.3.1",
