--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "IRWatcher",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "private": true,
   "scripts": {
     "start": "node app.js"
@@ -19,6 +19,7 @@
     "log4js": "~0.6.31",
     "log4js-memory-appender": "^1.0.2",
     "moment": "~2.11.1",
+    "moment-duration-format": "^1.3.0",
     "mongodb": "^2.1.7",
     "monk": "^1.0.1",
     "morgan": "^1.7.0",
