--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "jquery": "~2.2.0",
     "jsonpath-plus": "~0.14.0",
     "log4js": "~0.6.31",
-    "log4js-memory-appender": "^1.0.2",
+    "log4js-memory-appender": "^1.0.5",
     "moment": "~2.11.1",
     "moment-duration-format": "^1.3.0",
     "mongodb": "^2.1.7",
     "monk": "^1.0.1",
     "morgan": "^1.7.0",
+    "node-schedule": "^1.1.1",
     "request": "~2.69.0",
     "serve-favicon": "~2.3.0",
     "string": "^3.3.1",
