--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "IRWatcher",
-  "version": "1.0.8",
+  "name": "irwatcher",
+  "version": "1.0.9",
   "private": true,
   "scripts": {
     "start": "node app.js"
